Fixed icons on ios

--- a/src/app/icons/style.scss
+++ b/src/app/icons/style.scss
@@ -6,7 +6,6 @@
   svg {
     max-height: 100%;
     max-width: 100%;
-    height: 100%;
     width: 100%;
     fill: $f-color;
     transition: 150ms fill ease-in-out;
